[package]
name = "phone_audio_converte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg = {path="ffmpeg"}
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
futures = "0.3.30"