[package]
name = "phone_audio_converter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
zip = "2.2.0"
reqwest = "0.12.7"
serde_json = "1.0.127"
